--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --base-href https://github.com/javadelice/top-collegue-front-crm/",
+    "build": "ng build --prod --base-href https://javadelice.github.io/top-collegue-front-crm/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
